bugfixes with time format, added an icon, support for new horizons

--- a/newHorizons.html
+++ b/newHorizons.html
@@ -10,7 +10,7 @@
     <title>Animal Crossing: Automated Music Player</title>
   </head>
   <body>
-    <h4 id="game_name">New Leaf</h1> <!-- Title -->
+    <h4 id="game_name">New Horizions</h1> <!-- Title -->
     <h1 id="title_time">00:00:00 AM</h1> <!-- Dynamic Clock -->
     
     <!-- Options Button -->
