--- a/wildWorld.html
+++ b/wildWorld.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id = "background_image">
   <head>
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
@@ -11,11 +11,11 @@
   </head>
   <body>
     <h4 id="game_name">Wild World</h1> 
+    <p></p>
     <h1 id="title_time">00:00:00 AM</h1> 
     
 
-    <!-- Wild world button -->
-
+    <!-- Options button -->
     <p id = "button">
         <span class="tooltip" >
           <a href="" id="options_button" title="Takes you to the options.">
@@ -24,6 +24,7 @@
         </span>
       </p>
 
+      <!-- Back Button -->
     <p id = "button">
         <span class="tooltip" >
           <a href="./index.html" id="menu_button" title="Takes you back to the main menu.">
@@ -43,6 +44,6 @@
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
     <script src="./bin/scripts/stopMenuMusic.js" param="menu_music"></script> <!-- stop the menu music-->
-    <script src="./bin/scripts/updateTime.js"></script> <!-- stop the menu music-->
+    <script src="./bin/scripts/updateTime.js"></script> <!-- update our clock, and play the appropriate music -->
   </body>
 </html>
