Icon updated, randomized background, bugfixes

--- a/options.html
+++ b/options.html
@@ -15,7 +15,7 @@
     
 
     <!-- play music in the background-->
-    <audio autoplay  id="menu_music" loop>
+    <audio autoplay  id="menu_music">
       <source src="./bin/music/title/menu.mp3"></source>
       <script src="./bin/scripts/setVolume20.js" param="menu_music"></script> <!-- lower the volume of the audio-->
     </audio>
@@ -54,6 +54,5 @@
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
     <script src="./bin/scripts/stopMenuMusic.js"></script>
-    <script src="bin/scripts/randomBackground.js"></script>
   </body>
 </html>
