fixed volume buttons in options

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
         </a>
       </span>
     </p>
+
+    <!-- Options Button -->
+    <p id = "button">
+      <span class="tooltip" >
+        <a href="./options.html" id="options_button" title="Takes you to the options.">
+          Options
+        </a>
+      </span>
+    </p>
     
     
 
