Added saving/loading of setting

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <h1 id="title">Animal Crossing</h1>
 
-    
+    <!--<p1 style="text-align: center;">Weather Information</p1>-->
 
     <!-- Wild world button -->
     <p id = "button">
